[workspace]
members = [
    ".",
    "example"
]

[package]
name = "rbatis-core"
version = "1.8.70"
description = "Core of rbatis, the rust SQL toolkit. Not intended to be used directly."
license = "Apache-2.0"
edition = "2018"
authors = [
    "zxj <zhuxiujia@qq.com>"
]
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"

[features]
default = ["all-database"]

debug_mode = []
all-database = ["sqlx-core", "sqlx-core/all-databases", "mysql", "postgres", "sqlite", "mssql", "bit-vec"]
mysql = ["sqlx-core", "sqlx-core/mysql"]
postgres = ["sqlx-core", "sqlx-core/postgres", "bit-vec"]
sqlite = ["sqlx-core", "sqlx-core/sqlite"]
mssql = ["sqlx-core", "sqlx-core/mssql"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1.3.0", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
log = { version = "0.4", default-features = false }
rexpr = { version = "1.0" }
py_sql = "1.0"
lazy_static = "1.4"

time = { version = "0.2.16", features = ["serde"] }
ipnetwork = { version = "0.17.0", features = ["serde"] }
sqlx-core = { version = "0.5.1", features = ["all-types", "runtime-tokio-rustls"], optional = true }

uuid = { version = "0.8", features = ["serde", "v4"] }

#only pg
bit-vec = { version = "0.6", features = ["serde"], optional = true }
bigdecimal_ = { version = "0.2.0", package = "bigdecimal", features = ["serde"] }