[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-std = { version = "1.8", features = ["attributes", "tokio02", "tokio03"] }
rbatis-core = { path = "../",features = ["tokio1-mysql"]}

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
